@@ -88,7 +88,7 @@ struct CongEditorWidget3Details
 #define DEBUG_EDITOR_WIDGET_VIEW  0
 #define LOG_GTK_WIDGET_SIGNALS    0
 #define LOG_CONG_DOCUMENT_SIGNALS 0
-#define LOG_EDITOR_NODES 0
+#define LOG_EDITOR_NODES 1
 #define LOG_EDITOR_AREAS 1
 
 #if DEBUG_EDITOR_WIDGET_VIEW
