@@ -67,7 +67,7 @@
 
 extern char *ilogo_xpm[];
 
-#define ENABLE_DEBUG_MENU 0
+#define ENABLE_DEBUG_MENU 1
 #define ENABLE_UNIMPLEMENTED_MENUS 1
 
 GtkWidget* make_uneditable_text(const gchar* text)
@@ -1224,6 +1224,17 @@ void menu_callback_debug_command_test (gpointer callback_data,
 	cong_document_end_command (doc,
 				   cmd);
 }
+
+static void 
+menu_callback_debug_objects (gpointer callback_data,
+			     guint callback_action,
+			     GtkWidget *widget)
+{
+	CongPrimaryWindow *primary_window = callback_data;
+
+	cong_object_debug_window (cong_primary_window_get_toplevel (primary_window));
+}
+
 #endif /* #if ENABLE_DEBUG_MENU */
 
 /* Callbacks for "Help" menu: */
@@ -1342,25 +1353,26 @@ static GtkItemFactoryEntry menu_items_with_doc[] =
 	{ N_("/Edit/Prefere_nces"),     NULL, menu_callback_preferences, 0, NULL },
 
 #if ENABLE_DEBUG_MENU
-	{ N_("/Debug"),                 NULL, NULL, 0, "<Branch>" },
-	{ N_("/Debug/Begin self-test of error-reporting system..."),           NULL, menu_callback_debug_error, 0, NULL },
-	{ N_("/Debug/Transform DocBook to HTML"),       NULL, menu_callback_debug_transform_docbook_to_html, 0, NULL },
-	{ N_("/Debug/Transform DocBook to XHTML"),       NULL, menu_callback_debug_transform_docbook_to_xhtml, 0, NULL },
-	{ N_("/Debug/Transform DocBook to HTML Help"),       NULL, menu_callback_debug_transform_docbook_to_html_help, 0, NULL },
-	{ N_("/Debug/Transform DocBook to Java Help"),       NULL, menu_callback_debug_transform_docbook_to_javahelp, 0, NULL },
-	{ N_("/Debug/Transform DocBook to FO"),       NULL, menu_callback_debug_transform_docbook_to_fo, 0, NULL },
+	{ ("/Debug"),                 NULL, NULL, 0, "<Branch>" },
+	{ ("/Debug/Begin self-test of error-reporting system..."),           NULL, menu_callback_debug_error, 0, NULL },
+	{ ("/Debug/Transform DocBook to HTML"),       NULL, menu_callback_debug_transform_docbook_to_html, 0, NULL },
+	{ ("/Debug/Transform DocBook to XHTML"),       NULL, menu_callback_debug_transform_docbook_to_xhtml, 0, NULL },
+	{ ("/Debug/Transform DocBook to HTML Help"),       NULL, menu_callback_debug_transform_docbook_to_html_help, 0, NULL },
+	{ ("/Debug/Transform DocBook to Java Help"),       NULL, menu_callback_debug_transform_docbook_to_javahelp, 0, NULL },
+	{ ("/Debug/Transform DocBook to FO"),       NULL, menu_callback_debug_transform_docbook_to_fo, 0, NULL },
 #if PRINT_TESTS
-	{ N_("/Debug/Preview XSL:FO"),       NULL, menu_callback_debug_preview_fo, 0, NULL },
+	{ ("/Debug/Preview XSL:FO"),       NULL, menu_callback_debug_preview_fo, 0, NULL },
 #endif /* #if PRINT_TESTS */
-	{ N_("/Debug/DTD"),             NULL, menu_callback_debug_dtd, 0, NULL },
-	{ N_("/Debug/Dialog"),             NULL, menu_callback_debug_dialog, 0, NULL },
-	{ N_("/Debug/Progress Checklist"),             NULL, menu_callback_debug_progress_checklist, 0, NULL },
-	{ N_("/Debug/Document Message Log"),           NULL, menu_callback_debug_document_message_log, 0, NULL },	
-	{ N_("/Debug/Document Signal Log"),           NULL, menu_callback_debug_document_signal_log, 0, NULL },	
-	{ N_("/Debug/Information Alert"),           NULL, menu_callback_debug_information_alert, 0, NULL },	
-	{ N_("/Debug/Glade Test"),           NULL, menu_callback_debug_glade_test, 0, NULL },	
-	{ N_("/Debug/Insert XML Fragment"),           NULL, menu_callback_debug_insert_xml_fragment, 0, NULL },	
-	{ N_("/Debug/Command Test"),           NULL, menu_callback_debug_command_test, 0, NULL },	
+	{ ("/Debug/DTD"),             NULL, menu_callback_debug_dtd, 0, NULL },
+	{ ("/Debug/Dialog"),             NULL, menu_callback_debug_dialog, 0, NULL },
+	{ ("/Debug/Progress Checklist"),             NULL, menu_callback_debug_progress_checklist, 0, NULL },
+	{ ("/Debug/Document Message Log"),           NULL, menu_callback_debug_document_message_log, 0, NULL },	
+	{ ("/Debug/Document Signal Log"),           NULL, menu_callback_debug_document_signal_log, 0, NULL },	
+	{ ("/Debug/Information Alert"),           NULL, menu_callback_debug_information_alert, 0, NULL },	
+	{ ("/Debug/Glade Test"),           NULL, menu_callback_debug_glade_test, 0, NULL },	
+	{ ("/Debug/Insert XML Fragment"),           NULL, menu_callback_debug_insert_xml_fragment, 0, NULL },	
+	{ ("/Debug/Command Test"),           NULL, menu_callback_debug_command_test, 0, NULL },	
+	{ ("/Debug/Objects"),           NULL, menu_callback_debug_objects, 0, NULL },
 #endif /* #if ENABLE_DEBUG_MENU */
 
 	{ N_("/_Tools"),        NULL, NULL, ACTION_MARKER_TOOLS_MENU, "<Branch>" },
@@ -1394,6 +1406,7 @@ static GtkItemFactoryEntry menu_items_without_doc[] =
 	{ ("/Debug/Information Alert"),           NULL, menu_callback_debug_information_alert, 0, NULL },	
 	{ ("/Debug/Glade Test"),           NULL, menu_callback_debug_glade_test, 0, NULL },	
 	{ ("/Debug/Get Plugin Information as XML"),           NULL, menu_callback_debug_plugin_info, 0, NULL },	
+	{ ("/Debug/Objects"),           NULL, menu_callback_debug_objects, 0, NULL },
 #endif /* #if ENABLE_DEBUG_MENU */
 
 	{ N_("/_Help"),        NULL, NULL, 0, "<Branch>" },
