@@ -1,5 +1,9 @@
 2004-03-09  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-widget3.c, cong-menus.c, cong-object.c, cong-object.h
+
+	Debug window that list all objects of each class in a tree view, to help track leaks.
+
 	* cong-editor-area-text-fragment.c, cong-editor-node-comment.c, cong-editor-node-comment.h, cong-editor-node-document.c, cong-editor-node-document.h, cong-editor-node-dtd.c, cong-editor-node-dtd.h, cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-node.h, cong-object.h
 
 	Created boilerplate macros for generating CongEditorNode subclasses, to help track reference leaks; fixed a bug that stops dispose functions chaining up to their parent class implementation
